--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -39,7 +39,9 @@
 }
 
 code {
-  background-color: var(--ifm-color-emphasis-300);
+  background-color: #dbd5f4;
+  margin-right: 5px;
+  margin-left: 5px;
   border-radius: 0.2rem;
 }
 
